# osmo-remsim

./: .checkpatch.conf  .gitignore  .gitreview  Makefile.am  README.md  TODO-RELEASE  configure.ac  libosmo-rspro.pc.in  move-asn1-header-files.sh
asn1/: RSPRO.asn
contrib/: Makefile.am  jenkins.sh  osmo-remsim.spec  osmo-remsim.spec.in  owhw-event-script.sh  remsim-apitool.py
contrib/etc_default/: Makefile.am  osmo-remsim-bankd  osmo-remsim-client  osmo-remsim-client-0  osmo-remsim-client-1  osmo-remsim-client-2  osmo-remsim-client-3
contrib/systemd/: Makefile.am  osmo-remsim-bankd.service  osmo-remsim-client@.service  osmo-remsim-server.service
debian/: changelog  control  copyright  libifd-osmo-remsim-client0.install  libosmo-rspro-dev.install  libosmo-rspro2.install  osmo-remsim-apitool.install  osmo-remsim-bankd.install  osmo-remsim-client-shell.install  osmo-remsim-client-st2.install  osmo-remsim-client.install  osmo-remsim-doc.install  osmo-remsim-server.install  rules
doc/: Makefile.am  osmo-remsim-simple.dot  osmo-remsim.dot  remote-sim.dot
doc/examples/: Makefile.am
doc/manuals/: Makefile.am  osmo-remsim-usermanual-docinfo.xml  osmo-remsim-usermanual.adoc
doc/manuals/chapters/: logging.adoc  overview.adoc  remsim-apitool.adoc  remsim-bankd.adoc  remsim-client.adoc  remsim-server.adoc  rspro.adoc
ffasn1c/: Makefile  main.c  rspro.c  rspro.h
include/osmocom/: Makefile.am
include/osmocom/rspro/: ATR.h  BankId.h  BankSlot.h  BankSlotStatusInd.h  ClientId.h  ClientSlot.h  ClientSlotStatusInd.h  ComponentIdentity.h  ComponentName.h  ComponentType.h  ConfigClientBankReq.h  ConfigClientBankRes.h  ConfigClientIdReq.h  ConfigClientIdRes.h  ConfigClientReq.h  ConfigClientRes.h  ConnectBankReq.h  ConnectBankRes.h  ConnectClientReq.h  ConnectClientRes.h  CreateMappingReq.h  CreateMappingRes.h  ErrorCode.h  ErrorInd.h  ErrorSeverity.h  ErrorString.h  INTEGER.h  IpAddress.h  IpPort.h  Ipv4Address.h  Ipv6Address.h  Makefile.am  NativeEnumerated.h  OperationTag.h  PortNumber.h  RemoveMappingReq.h  RemoveMappingRes.h  ResetStateReq.h  ResetStateRes.h  ResultCode.h  (+13 more)
src/: Makefile.am  asn1c_helpers.c  asn1c_helpers.h  bankd.h  bankd_client_fsm.c  bankd_main.c  bankd_pcsc.c  bankd_pcsc_slots.csv  bankd_slotmap.c  client.h  debug.c  debug.h  driver_pcsc.c  main.c  remsim_client.c  remsim_client_fsm.c  remsim_client_fsm.h  rspro_client.c  rspro_client_fsm.c  rspro_client_fsm.h  rspro_util.c  rspro_util.h  simtrace2-remsim_client.c  slotmap.c  slotmap.h
src/bankd/: Makefile.am  bankd.h  bankd_main.c  bankd_pcsc.c  driver_core.c  driver_pcsc.c  gsmtap.c  gsmtap.h  internal.h  main.c
src/client/: Makefile.am  client.h  main_fsm.c  osmo-remsim-client-reader_conf.in  remsim_client.c  remsim_client_main.c  simtrace2-remsim_client.c  user_ifdhandler.c  user_shell.c  user_simtrace2.c
src/rspro/: ATR.c  BIT_STRING.c  BOOLEAN.c  BankId.c  BankSlot.c  BankSlotStatusInd.c  ClientId.c  ClientSlot.c  ClientSlotStatusInd.c  ComponentIdentity.c  ComponentName.c  ComponentType.c  ConfigClientBankReq.c  ConfigClientBankRes.c  ConfigClientIdReq.c  ConfigClientIdRes.c  ConfigClientReq.c  ConfigClientRes.c  ConnectBankReq.c  ConnectBankRes.c  ConnectClientReq.c  ConnectClientRes.c  CreateMappingReq.c  CreateMappingRes.c  ErrorCode.c  ErrorInd.c  ErrorSeverity.c  ErrorString.c  IA5String.c  INTEGER.c  IpAddress.c  IpPort.c  Ipv4Address.c  Ipv6Address.c  Makefile.am  NativeEnumerated.c  NativeInteger.c  OCTET_STRING.c  OperationTag.c  PortNumber.c  (+24 more)
src/server/: Makefile.am  remsim_server.c  rest_api.c  rest_api.h  rspro_server.c  rspro_server.h
src/simtrace2/: apdu_dispatch.c
