noinst_HEADERS = \
	ATR.h \
	BankId.h \
	BankSlot.h \
	BankSlotStatusInd.h \
	ClientId.h \
	ClientSlot.h \
	ClientSlotStatusInd.h \
	ComponentIdentity.h \
	ComponentName.h \
	ComponentType.h \
	ConfigClientReq.h \
	ConfigClientRes.h \
	ConnectBankReq.h \
	ConnectBankRes.h \
	ConnectClientReq.h \
	ConnectClientRes.h \
	CreateMappingReq.h \
	CreateMappingRes.h \
	IpAddress.h \
	IpPort.h \
	Ipv4Address.h \
	Ipv6Address.h \
	OperationTag.h \
	PortNumber.h \
	RemoveMappingReq.h \
	RemoveMappingRes.h \
	ResultCode.h \
	RsproPDU.h \
	RsproPDUchoice.h \
	SetAtrReq.h \
	SetAtrRes.h \
	SlotNumber.h \
	SlotPhysStatus.h \
	TpduCardToModem.h \
	TpduFlags.h \
	TpduModemToCard.h \
	$(NULL)


rspro_HEADERS = \
	rspro_client.h

rsprodir = $(includedir)/osmocom/rspro
