noinst_HEADERS = \
	ATR.h \
	BankId.h \
	BankSlot.h \
	BankSlotStatusInd.h \
	ClientId.h \
	ClientSlot.h \
	ClientSlotStatusInd.h \
	ComponentIdentity.h \
	ComponentName.h \
	ComponentType.h \
	ConfigClientReq.h \
	ConfigClientRes.h \
	ConnectBankReq.h \
	ConnectBankRes.h \
	ConnectClientReq.h \
	ConnectClientRes.h \
	CreateMappingReq.h \
	CreateMappingRes.h \
	IpAddress.h \
	IpPort.h \
	Ipv4Address.h \
	Ipv6Address.h \
	OperationTag.h \
	PortNumber.h \
	RemoveMappingReq.h \
	RemoveMappingRes.h \
	ResultCode.h \
	RsproPDU.h \
	RsproPDUchoice.h \
	SetAtrReq.h \
	SetAtrRes.h \
	SlotNumber.h \
	SlotPhysStatus.h \
	TpduCardToModem.h \
	TpduFlags.h \
	TpduModemToCard.h \
	$(NULL)

noinst_HEADERS+=BOOLEAN.h
noinst_HEADERS+=INTEGER.h
noinst_HEADERS+=NativeEnumerated.h
noinst_HEADERS+=IA5String.h
noinst_HEADERS+=NativeInteger.h
noinst_HEADERS+=constr_CHOICE.h
noinst_HEADERS+=constr_SEQUENCE.h
noinst_HEADERS+=asn_application.h
noinst_HEADERS+=asn_system.h
noinst_HEADERS+=asn_codecs.h
noinst_HEADERS+=asn_internal.h
noinst_HEADERS+=OCTET_STRING.h
noinst_HEADERS+=BIT_STRING.h
noinst_HEADERS+=asn_codecs_prim.h
noinst_HEADERS+=ber_tlv_length.h
noinst_HEADERS+=ber_tlv_tag.h
noinst_HEADERS+=ber_decoder.h
noinst_HEADERS+=der_encoder.h
noinst_HEADERS+=constr_TYPE.h
noinst_HEADERS+=constraints.h
noinst_HEADERS+=xer_support.h
noinst_HEADERS+=xer_decoder.h
noinst_HEADERS+=xer_encoder.h
noinst_HEADERS+=per_support.h
noinst_HEADERS+=per_decoder.h
noinst_HEADERS+=per_encoder.h
noinst_HEADERS+=per_opentype.h

rspro_HEADERS = \
	rspro_client.h

rsprodir = $(includedir)/osmocom/rspro
